# draagon-ai

./: .gitignore  .pytest_cache  CLAUDE.md  CONSTITUTION.md  README.md  TODO.txt  draagon-workspace.code-workspace  draagon.example.yaml  pyproject.toml
.claude/: README.md
.claude/commands/: clarify.md  constitution.md  implement.md  plan.md  review.md  specify.md  tasks.md  test.md
.github/workflows/: ci.yml
.specify/: README.md  spec.yaml
.specify/constitution/: constitution.md  principles.md  scope.md  testing-principles.md
.specify/memory/: README.md
.specify/planning/: FR-001-implementation-plan.md  FR-001-implementation-review-report.md  FR-001-review-report.md  FR-002-FR-003-FR-004-implementation-plan.md  FR-002-specification-review-report.md  FR-009-implementation-plan.md  FR-012-implementation-plan.md  README.md
.specify/requirements/: CONSTITUTION_COMPLIANCE.md  FR-001-shared-cognitive-working-memory.md  FR-002-parallel-multi-agent-orchestration.md  FR-003-multi-agent-belief-reconciliation.md  FR-004-transactive-memory-system.md  FR-005-metacognitive-reflection-service.md  FR-006-word-sense-disambiguation.md  FR-007-semantic-expansion-service.md  FR-008-multi-agent-integration.md  FR-009-integration-testing-framework.md  FR-010-real-agent-integration-tests.md  FR-011-cicd-infrastructure.md  FR-012-production-grade-retrieval-benchmark.md  README.md
data/: benchmark_corpus.json  benchmark_corpus.provenance.json
docs/: ANGEL_INVESTOR_ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_REVISED.md  COMPETITIVE_ANALYSIS_AND_LICENSING.md  COMPETITIVE_ARCHITECTURE_ANALYSIS.md  DRAAGON_AI_MASTER_STRATEGY.md  FITNESS_COACH_BUSINESS_MODEL.md  FITNESS_COACH_FINANCIALS.md  FITNESS_COACH_PITCH_FOR_MIKE.md  FITNESS_COACH_TECHNICAL_ASSESSMENT.md  FULL_SYSTEM_COMPARISON.md  GOD_LEVEL_ORCHESTRATOR_DESIGN.md  HEALTHCARE_EXECUTIVE_REVIEW.md  HUMAN_AI_SYMBIOSIS_MODEL.md  IDEAS.md  IDEAS.txt  KILLER_FEATURE_ANALYSIS.md  ORCHESTRATOR_PROTOTYPE_DESIGN.md  PATHS_TO_SUCCESS.md  REALITY_CHECK_AND_BUILD_PLAN.md  RECURSIVE_SELF_IMPROVEMENT_ANALYSIS.md  REVISED_MASTER_STRATEGY.md  STRATEGY_DOCS_INDEX.md  SYMBIOSIS_REALITY_CHECK.md  TESTING.md
docs/architecture/: GRAPH_ONTOLOGY_DESIGN.md  PROBABILISTIC_GRAPH_REASONING.md  REASONING_LOOP_AUDIT.md  UNIVERSAL_SEMANTIC_MEMORY.md
docs/design/: AGI_LITE_ARCHITECTURE.md  BEHAVIOR_ARCHITECT_PLAN.md  BEHAVIOR_SYSTEM_DESIGN.md  CRITICAL_ANALYSIS.md  INDUSTRY_RESEARCH_2024.md  SCHEDULING_SYSTEM.md
docs/requirements/: DELIVERY_CHECKLIST.md  DO_NEXT.md  IMPLEMENTATION_WORKFLOW.md  PROMPTS.md  REQ-001-MEMORY.md  REQ-002-ORCHESTRATOR.md  REQ-003-COGNITION.md  REQ-004-AUTONOMOUS.md  REQ-005-MCP.md  REQ-006-ROXY.md
docs/research/: FR-011-adaptive-retrieval-strategies.md  comprehensive-retrieval-benchmark-plan.md  embedding-strategy-benchmark-results.md  hybrid-parallel-retrieval-spec.md  hybrid-retrieval-architecture.md  semantic_query_expansion.md  (+1 more)
extensions/autonomous/: README.md  pyproject.toml
extensions/autonomous/src/draagon_ai_ext_autonomous/: __init__.py  extension.py  prompts.py  types.py
extensions/autonomous/tests/: test_autonomous.py
extensions/home-assistant/: README.md  pyproject.toml
extensions/home-assistant/src/draagon_ai_ext_ha/: __init__.py  client.py  extension.py  resolver.py
extensions/security-monitor/: DESIGN.md  README.md  pyproject.toml
extensions/security-monitor/src/draagon_ai_ext_security/: __init__.py  behavior.py  extension.py  models.py  prompts.py  service.py  tools.py
extensions/security-monitor/src/draagon_ai_ext_security/monitors/: __init__.py  base.py  suricata.py  syslog.py  system_health.py
extensions/security-monitor/tests/: __init__.py  test_service.py  test_service_integration.py
extensions/storytelling/: README.md  pyproject.toml  setup.py
extensions/storytelling/src/draagon_ai_ext_storytelling/: __init__.py  behavior.py  extension.py
prototypes/: README.md
prototypes/implicit_knowledge_graphs/: CLAUDE.md  README.md  conftest.py  demo_complex_cases.py  demo_pipeline.py  pyproject.toml  setup.py
prototypes/implicit_knowledge_graphs/data/synsets/: ai_ml.json  cloud_infrastructure.json  databases.json  devops_cicd.json  general_tech.json  observability.json  programming_frameworks.json  web_apis.json
prototypes/implicit_knowledge_graphs/docs/: DECOMPOSITION_SYSTEM_REVIEW.docx  DECOMPOSITION_SYSTEM_REVIEW.md
prototypes/implicit_knowledge_graphs/docs/design-decisions/: DD-001-CONTENT_TYPE_AWARE_PROCESSING.md
prototypes/implicit_knowledge_graphs/docs/requirements/: PHASE_0_IDENTIFIERS.md
prototypes/implicit_knowledge_graphs/docs/research/: CONTINUED_RESEARCH.md  DECOMPOSITION_THEORY.md  DEEP_DIVE_CROSS_REFERENCE_LINKING.md  WSD_AND_ENTITY_LINKING.md
prototypes/implicit_knowledge_graphs/docs/specs/: EVOLUTIONARY_TESTING.md
prototypes/implicit_knowledge_graphs/src/: __init__.py  content_analyzer.py  content_aware_wsd.py  entity_classifier.py  evolving_synsets.py  identifiers.py  synset_learning.py  text_chunking.py  wsd.py
prototypes/implicit_knowledge_graphs/src/decomposition/: __init__.py  benchmarks.py  commonsense.py  config.py  integrated_pipeline.py  modality.py  models.py  negation.py  pipeline.py  presuppositions.py  semantic_roles.py  temporal.py
prototypes/implicit_knowledge_graphs/tests/: __init__.py  conftest.py  ground_truth.py  test_accuracy.py  test_content_analyzer.py  test_content_aware_wsd.py  test_content_type_integration.py  test_entity_classifier.py  test_evolving_synsets.py  test_identifiers.py  test_phase0_integration.py  test_synset_learning.py  test_text_chunking.py  test_wsd.py
prototypes/implicit_knowledge_graphs/tests/decomposition/: test_industry_benchmarks.py  test_integrated_pipeline.py  test_linguistic_benchmarks.py  test_models.py  test_pipeline.py  test_presuppositions.py  test_tier2_advanced.py
scripts/: build_benchmark_corpus.py
tests/: __init__.py  conftest.py  test_auth.py  test_cognition.py  test_cognition_integration.py  test_config.py  test_exceptions.py  test_extensions.py  test_mcp_client.py  test_mcp_e2e.py  test_persona.py
(+455 files in other folders)
