[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draagon-ai"
version = "0.1.0"
description = "Cognitive architecture for AI agents with personality, memory, and beliefs"
authors = [
    {name = "Doug Mealing", email = "doug@draagon.ai"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "agents", "personality", "memory", "cognitive", "mcp", "llm"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "tenacity>=8.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.7"]
groq = ["groq>=0.4"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]
ollama = ["ollama>=0.1"]
mcp = ["mcp>=1.0"]
all = [
    "qdrant-client>=1.7",
    "groq>=0.4",
    "openai>=1.0",
    "anthropic>=0.18",
    "ollama>=0.1",
    "mcp>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
draagon-architect = "draagon_ai.cli.architect:architect_cli"

[project.urls]
Homepage = "https://draagon.ai"
Documentation = "https://github.com/Draagon/draagon-ai#readme"
Repository = "https://github.com/Draagon/draagon-ai"
Issues = "https://github.com/Draagon/draagon-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/draagon_ai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
