[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draagon-ai-ext-home-assistant"
version = "0.1.0"
description = "Home Assistant extension for draagon-ai"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Doug Mealing", email = "dmealing@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "draagon-ai>=0.1.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.entry-points."draagon_ai.extensions"]
home_assistant = "draagon_ai_ext_ha:HomeAssistantExtension"

[project.urls]
Homepage = "https://github.com/dmealing/draagon-ai"
Documentation = "https://github.com/dmealing/draagon-ai/tree/main/extensions/home-assistant"

[tool.hatch.build.targets.wheel]
packages = ["src/draagon_ai_ext_ha"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
